<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/login_background"
    android:padding="@dimen/dim_16_dp"
    tools:context=".RegisterActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dim_16_dp"
        android:text="@string/register_here"
        android:textColor="@color/color_white"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_18sp"
        android:layout_gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dim_16_dp"
        android:layout_marginStart="@dimen/dim_16_dp"
        android:padding="@dimen/dim_16_dp"
        android:textStyle="bold"
        android:textColor="@color/color_white"
        android:hint="@string/enter_your_gmail_id"
        android:inputType="textEmailAddress"
        android:text=""
        android:id="@+id/id_gmail"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dim_16_dp"
        android:layout_marginStart="@dimen/dim_16_dp"
        android:padding="@dimen/dim_16_dp"
        android:textStyle="bold"
        android:textColor="@color/color_white"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:id="@+id/id_password"
        android:text=""/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dim_16_dp"
        android:layout_marginStart="@dimen/dim_16_dp"
        android:padding="@dimen/dim_16_dp"
        android:textStyle="bold"
        android:textColor="@color/color_white"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:id="@+id/id_cofirm_password"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:padding="@dimen/dim_16_dp"
        android:layout_marginEnd="@dimen/dim_16_dp"
        android:layout_marginStart="@dimen/dim_16_dp">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/dim_16_dp"
        android:layout_marginStart="@dimen/dim_16_dp"
        android:id="@+id/id_register"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/dim_16_dp"
        android:layout_marginStart="@dimen/dim_16_dp"
        android:id="@+id/id_cancel"/>
    </GridLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/color_white"
        android:textStyle="bold"
        android:padding="@dimen/dim_16_dp"
        android:layout_marginEnd="@dimen/dim_16_dp"
        android:id="@+id/id_login_here"
        android:layout_marginStart="@dimen/dim_16_dp"
        android:text="@string/already_have_an_account_login_here"/>

</LinearLayout>