<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dim_10_dp"
            android:layout_marginEnd="@dimen/dim_10_dp"
            android:layout_marginStart="@dimen/dim_10_dp"
            android:layout_marginTop="@dimen/dim_10_dp"
            android:background="@color/color_bg"
            android:columnCount="2">

            <ImageView
                android:id="@+id/id_image"
                android:padding="@dimen/dim_10_dp"
                android:contentDescription="@string/image_of_the_comic_character"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                android:id="@+id/id_section_powerstats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/color_white"
                android:padding="@dimen/dim_10_dp"
                android:textSize="@dimen/text_size_14sp"
                android:textStyle="bold" />
                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/fab_button_to_add_to_widget_and_favourites"
                    android:layout_margin="@dimen/fab_margin"
                    android:src="@drawable/add" />
            </LinearLayout>

        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dim_10_dp"
            android:layout_marginStart="@dimen/dim_10_dp"
            android:layout_marginBottom="@dimen/dim_10_dp"
            android:background="@color/color_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/dim_10_dp"
                android:textColor="@color/color_white"
                android:text="@string/biography"
                android:textSize="@dimen/text_size_16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id_section_biography"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_white"
                android:text=""
                android:padding="@dimen/dim_10_dp"
                android:textSize="@dimen/text_size_14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dim_10_dp"
            android:layout_marginStart="@dimen/dim_10_dp"
            android:layout_marginBottom="@dimen/dim_10_dp"
            android:background="@color/color_bg"
            android:orientation="vertical"
            android:padding="@dimen/dim_10_dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/dim_10_dp"
                android:text="@string/appearance"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text_size_16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id_section_appearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:padding="@dimen/dim_10_dp"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text_size_14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dim_10_dp"
            android:layout_marginStart="@dimen/dim_10_dp"
            android:layout_marginBottom="@dimen/dim_10_dp"
            android:background="@color/color_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/work"
                android:padding="@dimen/dim_10_dp"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text_size_16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id_section_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:padding="@dimen/dim_10_dp"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text_size_14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>